<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TableLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:divider="@drawable/keyboard_divider"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end">

        <TableRow
            android:id="@+id/tr_keyboard_view"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btn_one"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_one"/>

            <Button
                android:id="@+id/btn_two"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_two"/>

            <Button
                android:id="@+id/btn_three"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_three"/>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btn_four"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_four"/>

            <Button
                android:id="@+id/btn_five"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_five"/>

            <Button
                android:id="@+id/btn_six"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_six"/>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btn_seven"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_seven"/>

            <Button
                android:id="@+id/btn_eight"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_eight"/>

            <Button
                android:id="@+id/btn_nine"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_nine"/>
        </TableRow>

        <TableRow
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btn_asterix"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/asterix"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/btn_zero"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/number_zero"/>

            <Button
                android:id="@+id/btn_hash"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/hash"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btn_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </TableRow>

        <TableRow
            android:paddingTop="30dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <Button
                android:id="@+id/btn_call"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/call"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <!--<Button-->
                <!--android:id="@+id/btn_hang_up"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/hang_up"-->
                <!--android:textAppearance="?android:attr/textAppearanceMedium"/>-->

            <Button
                android:id="@+id/btn_call_logs"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/call_history"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </TableRow>

    </TableLayout>

</LinearLayout>
